# oscar

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  oscar-architecture.md  release-please-config.json
.github/workflows/: build-images.yml  pre-commit.yml  release-please.yml  tests.yml
connectors/: README.md
connectors/_skeleton/: Dockerfile  README.md  pyproject.toml
connectors/_skeleton/src/CONNECTOR_NAME/: __init__.py  config.py  server.py
connectors/_skeleton/src/CONNECTOR_NAME/tools/: example.py
connectors/_skeleton/tests/: test_example.py
connectors/cloud-llm/: Dockerfile  README.md  pyproject.toml
connectors/cloud-llm/src/cloud_llm/: __init__.py  audit.py  config.py  pricing.py  server.py
connectors/cloud-llm/src/cloud_llm/providers/: __init__.py  anthropic.py  base.py  google.py
connectors/cloud-llm/src/cloud_llm/tools/: complete.py
connectors/cloud-llm/tests/: test_complete.py
connectors/weather/: Dockerfile  README.md  pyproject.toml
connectors/weather/src/weather/: __init__.py  config.py  server.py
connectors/weather/src/weather/tools/: current_weather.py  forecast.py
connectors/weather/tests/: test_current_weather.py
docs/: connector-skeleton.md  gateway-identities.md  logging.md  schleuse-skeleton.md  skill-zeit.md  timer-and-alarm.md
docs/architecture/: oscar-on-hermes.md
gatekeeper/: Dockerfile  README.md  pyproject.toml
gatekeeper/src/gatekeeper/: __main__.py  config.py  handler.py  hermes.py  logging.py  push.py
harnesses/: README.md
ingestion/: README.md
schleusen/: README.md
schleusen/_skeleton/: README.md
scripts/: install.sh  render-template.py
shared/oscar_audit/: README.md  pyproject.toml
shared/oscar_audit/src/oscar_audit/: __init__.py  __main__.py  core.py  timeparse.py
shared/oscar_audit/tests/: test_core.py  test_timeparse.py
shared/oscar_db/: Dockerfile  README.md  alembic.ini  pyproject.toml
shared/oscar_db/migrations/: env.py  script.py.mako
shared/oscar_db/migrations/versions/: 20260512_0001_baseline.py  20260513_0002_skill_observability.py  20260513_0003_skill_drafts.py
shared/oscar_db/src/oscar_db/: __init__.py  cli.py
shared/oscar_db/tests/: test_cli.py
shared/oscar_health/: README.md  pyproject.toml
shared/oscar_health/src/oscar_health/: __init__.py  __main__.py  checks.py  runner.py
shared/oscar_health/tests/: test_checks.py
shared/oscar_help/: README.md  pyproject.toml
shared/oscar_help/src/oscar_help/: __init__.py  __main__.py  core.py
shared/oscar_help/tests/: test_core.py
shared/oscar_logging/: __init__.py  pyproject.toml
shared/oscar_logging/src/oscar_logging/: __init__.py  admin.py  runtime.py
shared/oscar_logging/tests/: test_debug_override.py
shared/oscar_skill_author/: README.md  pyproject.toml
shared/oscar_skill_author/src/oscar_skill_author/: __init__.py  __main__.py  apply.py  drafts.py  validation.py
shared/oscar_skill_author/tests/: test_apply.py  test_validation.py
shared/oscar_skill_reviewer/: README.md  pyproject.toml
shared/oscar_skill_reviewer/src/oscar_skill_reviewer/: __init__.py  __main__.py  core.py  notify.py
shared/oscar_skill_reviewer/tests/: test_core.py  test_notify.py
shared/oscar_skill_runs/: README.md  pyproject.toml
shared/oscar_skill_runs/src/oscar_skill_runs/: __init__.py  __main__.py  core.py
shared/oscar_skill_runs/tests/: test_core.py
shared/oscar_time_jobs/: README.md  pyproject.toml
shared/oscar_time_jobs/src/oscar_time_jobs/: __init__.py  __main__.py  core.py  rrule.py
shared/oscar_time_jobs/tests/: test_core.py
signal_gateway/: Dockerfile  README.md  pyproject.toml
signal_gateway/src/signal_gateway/: __init__.py  __main__.py  config.py  hermes.py  identities.py  inbound.py  outbound.py  signal_client.py
signal_gateway/tests/: conftest.py  test_inbound.py  test_outbound.py
skills/: README.md
skills/alarm/: SKILL.md
skills/audit-query/: SKILL.md
skills/debug-set/: SKILL.md
skills/help/: SKILL.md
skills/identity-link/: SKILL.md
skills/light/: SKILL.md
skills/skill-author/: SKILL.md
skills/skill-revert/: SKILL.md
skills/skill-reviewer/: SKILL.md
skills/status/: SKILL.md
skills/timer/: SKILL.md
stacks/oscar/: README.md
templates/oscar-brain/: README.md  post-deploy.py  template.yml  variables.json
templates/oscar-connectors/: README.md  template.yml  variables.json
templates/oscar-hermes/: README.md  template.yml  variables.json
templates/oscar-household/: README.md  post-deploy.py  template.yml  variables.json
templates/oscar-ingestion/: README.md
templates/oscar-schleusen/: README.md
templates/oscar-voice/: README.md  template.yml  variables.json
tuersteher/: README.md
