[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-signal-gateway"
version = "0.1.0"
description = "OSCAR Signal gateway — bridges signal-cli-rest-api (inbound polling) and HERMES /converse, exposes POST /send for outbound."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "aiohttp>=3.9",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
  "oscar-logging",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "pytest-aiohttp>=1.0",
  "pytest-httpx>=0.30",
]

[project.scripts]
"signal-gateway" = "signal_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["signal_gateway*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
