[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-connector-CONNECTOR_NAME"
version = "0.1.0"
description = "OSCAR connector — CONNECTOR_NAME. Replace this string."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "fastmcp>=2.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "oscar-logging",
]

[project.scripts]
"oscar-connector-CONNECTOR_NAME" = "CONNECTOR_NAME.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["CONNECTOR_NAME*"]

[tool.setuptools.package-dir]
"" = "src"
