[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-connector-weather"
version = "0.1.0"
description = "OSCAR weather connector — OpenWeatherMap-backed MCP server (current weather + 5-day forecast)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "fastmcp>=2.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "oscar-logging",
]

[project.scripts]
"oscar-connector-weather" = "weather.server:main"

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["weather*"]

[tool.setuptools.package-dir]
"" = "src"
