[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-audit"
version = "0.1.0"
description = "Query OSCAR's domain-audit Postgres tables (cloud_audit, gateway_identities, future tuersteher_decisions / ingestion_classifications) from a small CLI used by the audit.query HERMES skill."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "asyncpg>=0.29",
  "oscar-logging",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "freezegun>=1.5",
]

[project.scripts]
"oscar-audit" = "oscar_audit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_audit*"]

[tool.setuptools.package-dir]
"" = "src"
