[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-health"
version = "0.1.0"
description = "Dependency probes used at OSCAR container startup (wait_for_ready) and on demand (doctor) — Postgres, HTTP, TCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "asyncpg>=0.29",
  "httpx>=0.27",
  "oscar-logging",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
]

[project.scripts]
"oscar-health" = "oscar_health.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_health*"]

[tool.setuptools.package-dir]
"" = "src"
