[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-help"
version = "0.1.0"
description = "Skill-registry introspection — reads SKILL.md frontmatter so HERMES can answer 'what can you do?' deterministically without re-listing skills in every harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "oscar-logging",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[project.scripts]
"oscar-help" = "oscar_help.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_help*"]

[tool.setuptools.package-dir]
"" = "src"
