[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-logging"
version = "0.1.0"
description = "Structured JSON stdout logger for OSCAR components"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "asyncpg>=0.29",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
]

[project.scripts]
"oscar-logging-admin" = "oscar_logging.admin:main"

[project.urls]
Homepage = "https://github.com/mdopp/oscar"
Repository = "https://github.com/mdopp/oscar"
Spec = "https://github.com/mdopp/oscar/blob/main/docs/logging.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_logging*"]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"
