[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-skill-author"
version = "0.1.0"
description = "Apply user-initiated and reviewer-autonomous skill edits to skills-local/ with local git history. Constraint-enforced (no admin escalations, no routing description changes)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "asyncpg>=0.29",
  "oscar-logging",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
]

[project.scripts]
"oscar-skill-author" = "oscar_skill_author.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_skill_author*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
