[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-skill-reviewer"
version = "0.1.0"
description = "Autonomous correction-driven skill edits. Aggregates skill_corrections, drafts patches, applies with rate-limit + admin notification via Signal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "asyncpg>=0.29",
  "httpx>=0.27",
  "oscar-logging",
  "oscar-skill-author",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
]

[project.scripts]
"oscar-skill-reviewer" = "oscar_skill_reviewer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_skill_reviewer*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
