[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-skill-runs"
version = "0.1.0"
description = "OSCAR skill-run + correction logging. Writes to skill_runs / skill_corrections in oscar-brain Postgres; detects negation-prefixed user corrections."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "asyncpg>=0.29",
  "oscar-logging",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
]

[project.scripts]
"oscar-skill-runs" = "oscar_skill_runs.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oscar_skill_runs*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
